[package]
name = "windows_theme_switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
winreg = "0.10.1"
anyhow = "1.0.57"
windows = { version = "0.44.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[build-dependencies]
winres = "0.1.12"

[[bin]]
name = "switch-theme"
path = "src/main.rs"
