[package]
name = "toggle_windows_theme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.10.1"
windows = { version = "0.44.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[build-dependencies]
winres = "0.1.12"

[[bin]]
name = "toggle-theme"
path = "src/main.rs"
